--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,8 +3,8 @@ asynch==0.2.5; python_version >= '3.9' and python_version < '4.0'
 authlib==1.3.1; python_version >= '3.8'
 bitarray==3.0.0
 blinker==1.9.0; python_version >= '3.9'
-boto3==1.35.65; python_version >= '3.8'
-botocore==1.35.65; python_version >= '3.8'
+boto3==1.35.67; python_version >= '3.8'
+botocore==1.35.67; python_version >= '3.8'
 cachelib==0.9.0; python_version >= '3.7'
 cachetools==5.5.0; python_version >= '3.7'
 certifi==2024.8.30; python_version >= '3.6'
@@ -81,7 +81,7 @@ pytz==2024.2
 requests==2.32.3; python_version >= '3.8'
 requests-oauthlib==1.1.0
 rsa==4.9; python_version >= '3.6' and python_version < '4'
-s3transfer==0.10.3; python_version >= '3.8'
+s3transfer==0.10.4; python_version >= '3.8'
 setuptools==75.6.0; python_version >= '3.9'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 sqlalchemy==1.4.54; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
@@ -90,7 +90,7 @@ sqlalchemy-redshift==0.8.14; python_version >= '3.4'
 sqlalchemy-trino==0.5.0; python_version >= '3.7'
 stanio==0.5.1; python_version >= '3.8'
 tenacity==9.0.0; python_version >= '3.8'
-thrift==0.16.0
+thrift==0.16.0; python_version >= '3.0'
 thrift-sasl==0.4.3
 tqdm==4.67.0; python_version >= '3.7'
 trino[sqlalchemy]==0.330.0; python_version >= '3.8'
@@ -103,7 +103,7 @@ zope.interface==7.1.1; python_version >= '3.8'
 zstd==1.5.5.1
 alembic==1.14.0; python_version >= '3.8'
 amqp==5.3.1; python_version >= '3.6'
-apache-superset==4.1.0; python_version ~= '3.9'
+apache-superset==4.1.1; python_version ~= '3.9'
 apispec[yaml]==6.7.1; python_version >= '3.9'
 apsw==3.47.0.0; python_version >= '3.9'
 attrs==24.2.0; python_version >= '3.7'
@@ -130,7 +130,7 @@ flask-appbuilder==4.5.2; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==2.3.0; python_version >= '3.8'
 flask-compress==1.17; python_version >= '3.9'
-flask-jwt-extended==4.7.0; python_version >= '3.9' and python_version < '4'
+flask-jwt-extended==4.7.1; python_version >= '3.9' and python_version < '4'
 flask-limiter==3.8.0; python_version >= '3.8'
 flask-login==0.6.3; python_version >= '3.7'
 flask-migrate==3.1.0; python_version >= '3.6'
@@ -207,7 +207,7 @@ typing-extensions==4.12.2; python_version >= '3.8'
 url-normalize==1.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 vine==5.1.0; python_version >= '3.6'
 wcwidth==0.2.13
-wrapt==1.16.0; python_version >= '3.6'
+wrapt==1.17.0; python_version >= '3.8'
 wsproto==1.2.0; python_full_version >= '3.7.0'
 wtforms==3.2.1; python_version >= '3.9'
 wtforms-json==0.3.5
