--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,44 @@
 -i https://pypi.org/simple
-alembic==1.14.0; python_version >= '3.8'
+alembic==1.15.1; python_version >= '3.9'
 amqp==5.3.1; python_version >= '3.6'
-apache-superset==4.1.1; python_version ~= '3.9'
-apispec[yaml]==6.7.1; python_version >= '3.9'
-apsw==3.47.0.0; python_version >= '3.9'
-attrs==24.2.0; python_version >= '3.7'
-babel==2.16.0; python_version >= '3.8'
+apache-superset==4.1.2; python_version ~= '3.9'
+apispec[yaml]==6.8.1; python_version >= '3.9'
+apsw==3.49.1.0; python_version >= '3.9'
+attrs==25.3.0; python_version >= '3.8'
+babel==2.17.0; python_version >= '3.8'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
-bcrypt==4.2.1; python_version >= '3.7'
+bcrypt==4.3.0; python_version >= '3.8'
 billiard==4.2.1; python_version >= '3.7'
 blinker==1.9.0; python_version >= '3.9'
 bottleneck==1.4.2; python_version >= '3.9'
 brotli==1.1.0; platform_python_implementation != 'PyPy'
-cachelib==0.9.0; python_version >= '3.7'
-cachetools==5.5.0; python_version >= '3.7'
-cattrs==24.1.2; python_version >= '3.8'
+cachelib==0.13.0; python_version >= '3.8'
+cachetools==5.5.2; python_version >= '3.7'
+cattrs==24.1.3; python_version >= '3.8'
 celery==5.4.0; python_version >= '3.8'
-certifi==2024.8.30; python_version >= '3.6'
+certifi==2025.1.31; python_version >= '3.6'
 cffi==1.17.1; python_version >= '3.8'
-charset-normalizer==3.4.0; python_full_version >= '3.7.0'
-click==8.1.7; python_version >= '3.7'
+charset-normalizer==3.4.1; python_version >= '3.7'
+click==8.1.8; python_version >= '3.7'
 click-didyoumean==0.3.1; python_full_version >= '3.6.2'
-click-option-group==0.5.6; python_version >= '3.6' and python_version < '4'
+click-option-group==0.5.7; python_version >= '3.7'
 click-plugins==1.1.1
 click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 cron-descriptor==1.4.5
-croniter==5.0.1; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+croniter==6.0.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 cryptography==42.0.8; python_version >= '3.7'
-deprecated==1.2.15; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+deprecated==1.2.18; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
 dnspython==2.7.0; python_version >= '3.9'
 email-validator==2.2.0; python_version >= '3.8'
 flask==2.3.3; python_version >= '3.8'
-flask-appbuilder==4.5.2; python_version ~= '3.7'
+flask-appbuilder==4.6.1; python_version ~= '3.7'
 flask-babel==2.0.0
-flask-caching==2.3.0; python_version >= '3.8'
+flask-caching==2.3.1; python_version >= '3.8'
 flask-compress==1.17; python_version >= '3.9'
 flask-jwt-extended==4.7.1; python_version >= '3.9' and python_version < '4'
-flask-limiter==3.8.0; python_version >= '3.8'
+flask-limiter==3.12; python_version >= '3.10'
 flask-login==0.6.3; python_version >= '3.7'
 flask-migrate==3.1.0; python_version >= '3.6'
 flask-session==0.8.0; python_version >= '3.8'
@@ -48,97 +48,96 @@ flask-wtf==1.2.2; python_version >= '3.9'
 func-timeout==4.3.5
 geographiclib==2.0; python_version >= '3.7'
 geopy==2.4.1; python_version >= '3.7'
-google-auth==2.36.0; python_version >= '3.7'
+google-auth==2.38.0; python_version >= '3.7'
 greenlet==3.1.1; python_version >= '3.7'
 gunicorn==23.0.0; python_version >= '3.7'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 holidays==0.25; python_version >= '3.7'
-humanize==4.11.0; python_version >= '3.9'
+humanize==4.12.2; python_version >= '3.9'
 idna==3.10; python_version >= '3.6'
-importlib-metadata==8.5.0; python_version >= '3.8'
-importlib-resources==6.4.5; python_version >= '3.8'
+importlib-metadata==8.6.1; python_version >= '3.9'
 isodate==0.7.2; python_version >= '3.7'
 itsdangerous==2.2.0; python_version >= '3.8'
-jinja2==3.1.4; python_version >= '3.7'
+jinja2==3.1.6; python_version >= '3.7'
 jsonpath-ng==1.7.0
 jsonschema==4.23.0; python_version >= '3.8'
 jsonschema-specifications==2024.10.1; python_version >= '3.9'
-kombu==5.4.2; python_version >= '3.8'
+kombu==5.5.1; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
-limits==3.13.0; python_version >= '3.8'
+limits==4.4.1; python_version >= '3.10'
 llvmlite==0.43.0; python_version >= '3.9'
-mako==1.3.6; python_version >= '3.8'
+mako==1.3.9; python_version >= '3.8'
 markdown==3.7; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==3.0.2; python_version >= '3.9'
-marshmallow==3.23.1; python_version >= '3.9'
-marshmallow-sqlalchemy==0.28.2; python_version >= '3.7'
+marshmallow==3.26.1; python_version >= '3.9'
+marshmallow-sqlalchemy==1.4.1; python_version >= '3.9'
 mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.8; python_version >= '3.8'
-msgspec==0.18.6; python_version >= '3.8'
-nh3==0.2.18
+msgspec==0.19.0; python_version >= '3.9'
+nh3==0.2.21; python_version >= '3.8'
 numba==0.60.0; python_version >= '3.9'
-numexpr==2.10.1; python_version >= '3.9'
+numexpr==2.10.2; python_version >= '3.9'
 numpy==1.23.5; python_version >= '3.8'
 ordered-set==4.1.0; python_version >= '3.7'
 outcome==1.3.0.post0; python_version >= '3.7'
 packaging==24.2; python_version >= '3.8'
 pandas[performance]==2.0.3; python_version >= '3.8'
-paramiko==3.5.0; python_version >= '3.6'
+paramiko==3.5.1; python_version >= '3.6'
 parsedatetime==2.6
 pgsanity==0.2.9
-platformdirs==4.3.6; python_version >= '3.8'
+platformdirs==4.3.7; python_version >= '3.9'
 ply==3.11
 polyline==2.0.2; python_version >= '3.7'
 prison==0.2.1
-prompt-toolkit==3.0.48; python_full_version >= '3.7.0'
+prompt-toolkit==3.0.50; python_full_version >= '3.8.0'
 pyarrow==14.0.2; python_version >= '3.8'
 pyasn1==0.6.1; python_version >= '3.8'
 pyasn1-modules==0.4.1; python_version >= '3.8'
 pycparser==2.22; python_version >= '3.8'
-pygments==2.18.0; python_version >= '3.8'
-pyjwt==2.10.0; python_version >= '3.9'
+pygments==2.19.1; python_version >= '3.8'
+pyjwt==2.10.1; python_version >= '3.9'
 pynacl==1.5.0; python_version >= '3.6'
-pyopenssl==24.2.1; python_version >= '3.7'
-pyparsing==3.2.0; python_version >= '3.9'
+pyopenssl==25.0.0; python_version >= '3.7'
+pyparsing==3.2.3; python_version >= '3.9'
 pysocks==1.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-python-dotenv==1.0.1; python_version >= '3.8'
+python-dotenv==1.1.0; python_version >= '3.9'
 python-geohash==0.8.5
-pytz==2024.2
+pytz==2025.2
 pyyaml==6.0.2; python_version >= '3.8'
 redis==4.6.0; python_version >= '3.7'
-referencing==0.35.1; python_version >= '3.8'
+referencing==0.36.2; python_version >= '3.9'
 requests==2.32.3; python_version >= '3.8'
 requests-cache==1.2.1; python_version >= '3.8'
 rich==13.9.4; python_full_version >= '3.8.0'
-rpds-py==0.21.0; python_version >= '3.9'
+rpds-py==0.23.1; python_version >= '3.9'
 rsa==4.9; python_version >= '3.6' and python_version < '4'
 selenium==4.9.1; python_version >= '3.7'
-shillelagh[gsheetsapi]==1.3.2; python_version >= '3.9'
+shillelagh[gsheetsapi]==1.3.5; python_version >= '3.9'
 shortid==0.1.2
-simplejson==3.19.3; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2'
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-slack-sdk==3.33.4; python_version >= '3.6'
+simplejson==3.20.1; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2'
+six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+slack-sdk==3.35.0; python_version >= '3.6'
 sniffio==1.3.1; python_version >= '3.7'
 sortedcontainers==2.4.0
 sqlalchemy==1.4.54; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
-sqlglot==25.31.4; python_version >= '3.7'
-sqlparse==0.5.2; python_version >= '3.8'
+sqlglot==25.34.1; python_version >= '3.7'
+sqlparse==0.5.3; python_version >= '3.8'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-trio==0.27.0; python_version >= '3.8'
-trio-websocket==0.11.1; python_version >= '3.7'
+trio==0.29.0; python_version >= '3.9'
+trio-websocket==0.12.2; python_version >= '3.8'
 typing-extensions==4.12.2; python_version >= '3.8'
-tzdata==2024.2; python_version >= '2'
+tzdata==2025.1; python_version >= '2'
 url-normalize==1.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 urllib3[socks]==2.2.2; python_version >= '3.8'
 vine==5.1.0; python_version >= '3.6'
 wcwidth==0.2.13
 werkzeug==3.1.3; python_version >= '3.9'
-wrapt==1.17.0; python_version >= '3.8'
+wrapt==1.17.2; python_version >= '3.8'
 wsproto==1.2.0; python_full_version >= '3.7.0'
 wtforms==3.2.1; python_version >= '3.9'
 wtforms-json==0.3.5
