--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,6 @@ name = "pypi"
 
 [packages]
 apache-superset = "==4.1.2"
-urllib3 = "==2.2.2"
 
 [dev-packages]
 "infi.clickhouse-orm" = "==2.1.3"
@@ -25,13 +24,13 @@ openpyxl = "==3.1.2"
 pillow = "==10.3.0"
 prophet = "==1.1.5"
 psycopg2 = "==2.9.7"
-pyathena = "==3.0.7"
+pyathena = "==3.12.2"
 pydruid = "==0.6.5"
 pyhive = "==0.7.0"
 pyldap = "==3.0.0"
 # pymssql-linux = "==2.1.6"
 # sasl = "==0.3.1"
-# snowflake-sqlalchemy = "==1.5.1"
+snowflake-sqlalchemy = "==1.7.3"
 sqlalchemy-bigquery = "==1.8.0"
 sqlalchemy-redshift = "==0.8.14"
 sqlalchemy-trino = "==0.5.0"
