--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,47 +1,51 @@
--i https://pypi.org/simple
+﻿-i https://pypi.org/simple
+asn1crypto==1.5.1
 asynch==0.2.5; python_version >= '3.9' and python_version < '4.0'
 authlib==1.3.1; python_version >= '3.8'
-bitarray==3.2.0
+bitarray==3.3.0
 blinker==1.9.0; python_version >= '3.9'
-boto3==1.37.20; python_version >= '3.8'
-botocore==1.37.20; python_version >= '3.8'
+boto3==1.37.23; python_version >= '3.8'
+botocore==1.37.23; python_version >= '3.8'
 cachelib==0.13.0; python_version >= '3.8'
 cachetools==5.5.2; python_version >= '3.7'
 certifi==2025.1.31; python_version >= '3.6'
-cffi==1.17.1; python_version >= '3.8'
+cffi==1.17.1; platform_python_implementation != 'PyPy'
 charset-normalizer==3.4.1; python_version >= '3.7'
 ciso8601==2.3.2
 click==8.1.8; python_version >= '3.7'
 clickhouse-driver==0.2.9; python_version >= '3.7' and python_version < '4'
 clickhouse-sqlalchemy==0.2.4; python_version >= '3.7' and python_version < '4'
 cmdstanpy==1.2.5; python_version >= '3.8'
-contourpy==1.3.1; python_version >= '3.10'
+colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
+contourpy==1.3.0; python_version >= '3.9'
 cryptography==42.0.8; python_version >= '3.7'
 cx-oracle==8.3.0
 cycler==0.12.1; python_version >= '3.8'
 et-xmlfile==2.0.0; python_version >= '3.8'
+filelock==3.18.0; python_version >= '3.9'
 flask==2.3.3; python_version >= '3.8'
 flask-cors==4.0.2
 flask-mail==0.9.1
 flask-oauth==0.12
 flask-oauthlib==0.9.6
 fonttools==4.56.0; python_version >= '3.8'
-fsspec==2025.3.0; python_version >= '3.8'
-future==1.0.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2'
+fsspec==2025.3.1; python_version >= '3.8'
+future==1.0.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gevent==23.9.1; python_version >= '3.8'
 google-api-core[grpc]==2.24.2; python_version >= '3.7'
-google-auth==2.38.0; python_version >= '3.7'
+google-auth==2.38.0
 google-cloud-bigquery==3.31.0; python_version >= '3.9'
 google-cloud-core==2.4.3; python_version >= '3.7'
-google-crc32c==1.7.0; python_version >= '3.9'
+google-crc32c==1.7.1; python_version >= '3.9'
 google-resumable-media==2.7.2; python_version >= '3.7'
 googleapis-common-protos==1.69.2; python_version >= '3.7'
 greenlet==3.1.1; python_version >= '3.7'
-grpcio==1.71.0; python_version >= '3.9'
-grpcio-status==1.71.0; python_version >= '3.9'
+grpcio==1.71.0
+grpcio-status==1.71.0
 holidays==0.25; python_version >= '3.7'
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 idna==3.10; python_version >= '3.6'
+importlib-metadata==8.6.1; python_version >= '3.9'
 importlib-resources==6.5.2; python_version >= '3.9'
 impyla==0.18.0
 infi.clickhouse-orm==2.1.3
@@ -49,11 +53,11 @@ iso8601==2.1.0; python_version >= '3.7' and python_version < '4.0'
 itsdangerous==2.2.0; python_version >= '3.8'
 jinja2==3.1.6; python_version >= '3.7'
 jmespath==1.0.1; python_version >= '3.7'
-kiwisolver==1.4.8; python_version >= '3.10'
+kiwisolver==1.4.7; python_version >= '3.8'
 leb128==1.0.8
 lz4==4.4.3; python_version >= '3.9'
 markupsafe==3.0.2; python_version >= '3.9'
-matplotlib==3.10.1; python_version >= '3.10'
+matplotlib==3.9.4; python_version >= '3.9'
 mysqlclient==2.2.0; python_version >= '3.8'
 numpy==1.23.5; python_version >= '3.8'
 oauth2==1.9.0.post1
@@ -62,57 +66,67 @@ openpyxl==3.1.2; python_version >= '3.6'
 packaging==24.2; python_version >= '3.8'
 pandas[performance]==2.0.3; python_version >= '3.8'
 pillow==10.3.0; python_version >= '3.8'
+platformdirs==4.3.7; python_version >= '3.9'
 prophet==1.1.5; python_version >= '3.7'
 proto-plus==1.26.1; python_version >= '3.7'
 protobuf==5.29.4; python_version >= '3.8'
 psycopg2==2.9.7; python_version >= '3.6'
 pure-sasl==0.6.2
 pyasn1==0.6.1; python_version >= '3.8'
-pyasn1-modules==0.4.1; python_version >= '3.8'
-pyathena==3.0.7; python_full_version >= '3.8.1'
+pyasn1-modules==0.4.2; python_version >= '3.8'
+pyathena==3.12.2; python_version >= '3.9'
 pycparser==2.22; python_version >= '3.8'
 pydruid==0.6.5
 pyhive==0.7.0
+pyjwt==2.10.1; python_version >= '3.9'
 pyldap==3.0.0
+pyopenssl==25.0.0
 pyparsing==3.2.3; python_version >= '3.9'
-python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-ldap==3.4.4; python_version >= '3.6'
 pytz==2025.2
 requests==2.32.3; python_version >= '3.8'
 requests-oauthlib==1.1.0
 rsa==4.9; python_version >= '3.6' and python_version < '4'
 s3transfer==0.11.4; python_version >= '3.8'
-setuptools==78.0.2; python_version >= '3.9'
-six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+setuptools==78.1.0; python_version >= '3.9'
+six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+snowflake-connector-python==3.14.0; python_version >= '3.8'
+snowflake-sqlalchemy==1.7.3; python_version >= '3.8'
+sortedcontainers==2.4.0
 sqlalchemy==1.4.54; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 sqlalchemy-bigquery==1.8.0; python_version < '3.12' and python_version >= '3.7'
 sqlalchemy-redshift==0.8.14; python_version >= '3.4'
 sqlalchemy-trino==0.5.0; python_version >= '3.7'
 stanio==0.5.1; python_version >= '3.8'
 tenacity==9.0.0; python_version >= '3.8'
-thrift==0.16.0
+thrift==0.16.0; python_version >= '3.0'
 thrift-sasl==0.4.3
+tomlkit==0.13.2; python_version >= '3.8'
 tqdm==4.67.1; python_version >= '3.7'
 trino[sqlalchemy]==0.333.0; python_version >= '3.9'
-tzdata==2025.1; python_version >= '2'
+typing-extensions==4.12.2; python_version >= '3.8'
+tzdata==2025.2; python_version >= '2'
 tzlocal==5.3.1; python_version >= '3.9'
-urllib3[socks]==2.2.2; python_version >= '3.8'
+urllib3[socks]==2.3.0; python_version >= '3.9'
 werkzeug==3.1.3; python_version >= '3.9'
+zipp==3.21.0; python_version >= '3.9'
 zope.event==5.0; python_version >= '3.7'
 zope.interface==7.2; python_version >= '3.8'
-zstandard==0.23.0; python_version >= '3.8'
+zstandard==0.23.0; platform_python_implementation != 'PyPy'
 zstd==1.5.6.6
-alembic==1.15.1; python_version >= '3.9'
+alembic==1.15.2; python_version >= '3.9'
 amqp==5.3.1; python_version >= '3.6'
 apache-superset==4.1.2; python_version ~= '3.9'
 apispec[yaml]==6.8.1; python_version >= '3.9'
 apsw==3.49.1.0; python_version >= '3.9'
+async-timeout==5.0.1; python_full_version <= '3.11.2'
 attrs==25.3.0; python_version >= '3.8'
 babel==2.17.0; python_version >= '3.8'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
 bcrypt==4.3.0; python_version >= '3.8'
 billiard==4.2.1; python_version >= '3.7'
-bottleneck==1.4.2; python_version >= '3.9'
+bottleneck==1.4.2
 brotli==1.1.0; platform_python_implementation != 'PyPy'
 cattrs==24.1.3; python_version >= '3.8'
 celery==5.4.0; python_version >= '3.8'
@@ -120,19 +134,19 @@ click-didyoumean==0.3.1; python_full_version >= '3.6.2'
 click-option-group==0.5.7; python_version >= '3.7'
 click-plugins==1.1.1
 click-repl==0.3.0; python_version >= '3.6'
-colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 cron-descriptor==1.4.5
 croniter==6.0.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecated==1.2.18; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
 dnspython==2.7.0; python_version >= '3.9'
 email-validator==2.2.0; python_version >= '3.8'
+exceptiongroup==1.2.2; python_version < '3.11'
 flask-appbuilder==4.6.1; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==2.3.1; python_version >= '3.8'
 flask-compress==1.17; python_version >= '3.9'
 flask-jwt-extended==4.7.1; python_version >= '3.9' and python_version < '4'
-flask-limiter==3.12; python_version >= '3.10'
+flask-limiter==3.11.0; python_version >= '3.9'
 flask-login==0.6.3; python_version >= '3.7'
 flask-migrate==3.1.0; python_version >= '3.6'
 flask-session==0.8.0; python_version >= '3.8'
@@ -142,18 +156,16 @@ flask-wtf==1.2.2; python_version >= '3.9'
 func-timeout==4.3.5
 geographiclib==2.0; python_version >= '3.7'
 geopy==2.4.1; python_version >= '3.7'
-gunicorn==23.0.0; python_version >= '3.7'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 humanize==4.12.2; python_version >= '3.9'
-importlib-metadata==8.6.1; python_version >= '3.9'
 isodate==0.7.2; python_version >= '3.7'
 jsonpath-ng==1.7.0
 jsonschema==4.23.0; python_version >= '3.8'
 jsonschema-specifications==2024.10.1; python_version >= '3.9'
-kombu==5.5.1; python_version >= '3.8'
+kombu==5.5.2; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
-limits==4.4.1; python_version >= '3.10'
+limits==4.2; python_version >= '3.9'
 llvmlite==0.43.0; python_version >= '3.9'
 mako==1.3.9; python_version >= '3.8'
 markdown==3.7; python_version >= '3.8'
@@ -164,24 +176,21 @@ mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.8; python_version >= '3.8'
 msgspec==0.19.0; python_version >= '3.9'
 nh3==0.2.21; python_version >= '3.8'
-numba==0.60.0; python_version >= '3.9'
-numexpr==2.10.2; python_version >= '3.9'
+numba==0.60.0
+numexpr==2.10.2
 ordered-set==4.1.0; python_version >= '3.7'
 outcome==1.3.0.post0; python_version >= '3.7'
 paramiko==3.5.1; python_version >= '3.6'
 parsedatetime==2.6
 pgsanity==0.2.9
-platformdirs==4.3.7; python_version >= '3.9'
 ply==3.11
 polyline==2.0.2; python_version >= '3.7'
 prison==0.2.1
 prompt-toolkit==3.0.50; python_full_version >= '3.8.0'
 pyarrow==14.0.2; python_version >= '3.8'
 pygments==2.19.1; python_version >= '3.8'
-pyjwt==2.10.1; python_version >= '3.9'
 pynacl==1.5.0; python_version >= '3.6'
-pyopenssl==25.0.0; python_version >= '3.7'
-pysocks==1.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pysocks==1.7.1
 python-dotenv==1.1.0; python_version >= '3.9'
 python-geohash==0.8.5
 pyyaml==6.0.2; python_version >= '3.8'
@@ -189,14 +198,13 @@ redis==4.6.0; python_version >= '3.7'
 referencing==0.36.2; python_version >= '3.9'
 requests-cache==1.2.1; python_version >= '3.8'
 rich==13.9.4; python_full_version >= '3.8.0'
-rpds-py==0.23.1; python_version >= '3.9'
+rpds-py==0.24.0; python_version >= '3.9'
 selenium==4.9.1; python_version >= '3.7'
 shillelagh[gsheetsapi]==1.3.5; python_version >= '3.9'
 shortid==0.1.2
-simplejson==3.20.1; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2'
+simplejson==3.20.1; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
 slack-sdk==3.35.0; python_version >= '3.6'
 sniffio==1.3.1; python_version >= '3.7'
-sortedcontainers==2.4.0
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
 sqlglot==25.34.1; python_version >= '3.7'
 sqlparse==0.5.3; python_version >= '3.8'
@@ -204,13 +212,12 @@ sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 trio==0.29.0; python_version >= '3.9'
 trio-websocket==0.12.2; python_version >= '3.8'
-typing-extensions==4.12.2; python_version >= '3.8'
-url-normalize==1.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+url-normalize==2.2.0; python_version >= '3.8'
 vine==5.1.0; python_version >= '3.6'
+waitress==3.0.2; sys_platform == 'win32'
 wcwidth==0.2.13
 wrapt==1.17.2; python_version >= '3.8'
 wsproto==1.2.0; python_full_version >= '3.7.0'
 wtforms==3.2.1; python_version >= '3.9'
 wtforms-json==0.3.5
 xlsxwriter==3.0.9; python_version >= '3.6'
-zipp==3.21.0; python_version >= '3.9'
